--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -6,4 +6,5 @@
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
     <bool name="show_ruishi_interface">true</bool>
+    <string name="qrcode_prefix">"%s"</string>
 </resources>
