--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -6,4 +6,5 @@
     <bool name="show_official_website">true</bool>
     <bool name="show_official_hot_line">true</bool>
     <bool name="show_ruishi_interface">false</bool>
+    <string name="qrcode_prefix">"http://a.app.qq.com/o/simple.jsp?pkgname=%s"</string>
 </resources>
