--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="show_all_right">false</bool>
+    <bool name="show_copyright">false</bool>
     <bool name="show_agreement">false</bool>
     <bool name="show_about">false</bool>
+    <bool name="show_about_logo">false</bool>
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
     <bool name="show_ruishi_interface">false</bool>
+    <string name="qrcode_prefix">"%s"</string>
 </resources>
