--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="show_agreement">true</bool>
-    <bool name="show_all_right">true</bool>
+    <bool name="show_copyright">true</bool>
     <bool name="show_about">true</bool>
+    <bool name="show_about_logo">true</bool>
     <bool name="show_official_website">true</bool>
     <bool name="show_official_hot_line">true</bool>
     <bool name="show_ruishi_interface">false</bool>
