--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -167,18 +167,6 @@
             android:text="0K/s"
             android:textColor="#FFFFFF" />
 
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
-            android:id="@+id/act_panorama_camera_loading"
-            android:layout_width="@dimen/y48"
-            android:layout_height="@dimen/y48"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/y184"
-            android:padding="@dimen/y10"
-            android:visibility="visible"
-            app:progress_point_radius="@dimen/y3"
-            app:progress_radius="@dimen/y50"
-            app:progress_stroke_color="@color/color_cecece" />
-
 
     </RelativeLayout>
 
@@ -246,6 +234,19 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/act_panorama_camera_bottom_panel"
+        android:layout_below="@+id/act_panorama_camera_toolbar">
+
+        <com.cylan.jiafeigou.widget.live.LivePlayControlView
+            android:id="@+id/act_panorama_camera_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
+    </FrameLayout>
 
     <View
         android:id="@+id/act_panorama_camera_bottom_count_down_line"
