--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -7,5 +7,7 @@
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
     <bool name="show_ruishi_interface">false</bool>
+    <bool name="show_third_login">false</bool>
+    <bool name="show_share_btn">false</bool>
     <string name="qrcode_prefix">"%s"</string>
 </resources>
