--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -40,15 +40,18 @@
 
                 <ImageView
                     android:id="@+id/act_media_header_opt_delete"
-                    style="@style/video_header_opt_delete" />
+                    style="@style/video_header_opt_delete"
+                    android:layout_weight="1" />
 
                 <ImageView
                     android:id="@+id/act_media_header_opt_download"
-                    style="@style/video_header_opt_download" />
+                    style="@style/video_header_opt_download"
+                    android:layout_weight="1" />
 
                 <ImageView
                     android:id="@+id/act_media_header_opt_share"
-                    style="@style/video_header_opt_share" />
+                    style="@style/video_header_opt_share"
+                    android:layout_weight="1" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -62,25 +65,38 @@
         android:background="#7F000000"
         android:clickable="true">
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/act_media_pic_option"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y60"
             android:layout_gravity="bottom"
+            android:orientation="horizontal"
             android:visibility="visible">
 
             <ImageView
                 android:id="@+id/act_media_picture_opt_download"
-                style="@style/picture_opt_download" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="@dimen/x10"
+                android:src="@drawable/icon_download" />
 
             <ImageView
                 android:id="@+id/act_media_picture_opt_share"
-                style="@style/picture_opt_share" />
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="@dimen/x10"
+                android:src="@drawable/icon_share" />
 
             <ImageView
                 android:id="@+id/act_media_picture_opt_delete"
-                style="@style/picture_opt_delete" />
-        </FrameLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:padding="@dimen/x10"
+                android:src="@drawable/wonderful_icon_view_picture_delete" />
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/act_media_video_option"
