--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -9,5 +9,5 @@
     <bool name="show_ruishi_interface">false</bool>
     <bool name="show_third_login">true</bool>
     <bool name="show_share_btn">true</bool>
-    <string name="qrcode_prefix">"http://a.app.qq.com/o/simple.jsp?pkgname=%s"</string>
+    <string name="qrcode_prefix">http://a.app.qq.com/o/simple.jsp?pkgname=%1$s&amp;id=%2$s</string>
 </resources>
