--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -9,5 +9,5 @@
     <bool name="show_ruishi_interface">false</bool>
     <bool name="show_third_login">false</bool>
     <bool name="show_share_btn">false</bool>
-    <string name="qrcode_prefix">"%s"</string>
+    <string name="qrcode_prefix">%1$s&amp;id=%2$s</string>
 </resources>
