配置doby,兼容部分手机

--- a/app/src/main/res/layout/pick_image_fragment_dialog.xml
+++ b/app/src/main/res/layout/pick_image_fragment_dialog.xml
@@ -16,7 +16,7 @@
             android:layout_marginEnd="@dimen/y25"
             android:layout_marginStart="@dimen/y25"
             android:drawableLeft="@drawable/me_icon_album_blue"
-            android:drawablePadding="@dimen/x10"
+            android:drawablePadding="@dimen/y20"
             android:gravity="center_vertical"
             android:text="@string/CHOOSE_PHOTOS"
             android:textColor="@color/color_979797"
@@ -29,7 +29,7 @@
             android:layout_marginEnd="@dimen/y25"
             android:layout_marginStart="@dimen/y25"
             android:drawableLeft="@drawable/me_icon_takepic"
-            android:drawablePadding="@dimen/x10"
+            android:drawablePadding="@dimen/y20"
             android:gravity="center_vertical"
             android:text="@string/TAKE_PHOTO"
             android:textColor="@color/color_979797"
