--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -68,7 +68,7 @@
         <LinearLayout
             android:id="@+id/act_media_pic_option"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y60"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="horizontal"
             android:visibility="visible">
