--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -10,4 +10,5 @@
     <bool name="show_third_login">false</bool>
     <bool name="show_share_btn">false</bool>
     <string name="qrcode_prefix">%1$s&amp;id=%2$s</string>
+    <string name="share_to_friends_link">https://play.google.com/store/apps/details?id=%s</string>
 </resources>
