--- a/app/src/main/res/layout/layout_panorama_connection_way.xml
+++ b/app/src/main/res/layout/layout_panorama_connection_way.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y23"
-                    android:text="家居模式"
+                    android:text="@string/Tap1_HomeMode"
                     android:textColor="#333333"
                     android:textSize="@dimen/sp18" />
 
@@ -49,6 +49,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y25"
                     android:autoLink="all"
+                    android:text="@string/Tap1_Camera_TCPconnected"
                     android:textColor="#666666"
                     android:textSize="@dimen/sp14" />
 
@@ -72,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/y23"
-                    android:text="户外模式"
+                    android:text="@string/Tap1_OutdoorMode"
                     android:textColor="#333333"
                     android:textSize="@dimen/sp18" />
 
@@ -94,6 +95,7 @@
                     android:layout_marginTop="@dimen/y21"
                     android:autoLink="all"
                     android:textColor="#666666"
+                    android:text="@string/Tap1_Camera_UDPconnected"
                     android:textSize="@dimen/sp14" />
             </RelativeLayout>
         </RelativeLayout>
