--- a/app/src/main/res/layout/layout_panorama_empty_photo.xml
+++ b/app/src/main/res/layout/layout_panorama_empty_photo.xml
@@ -10,6 +10,6 @@
         android:layout_gravity="center"
         android:drawableTop="@drawable/album_pic_empty_state"
         android:gravity="center"
-        android:text="世界那么大" />
+        android:text="@string/Tap1_Album_Empty" />
 
 </FrameLayout>
