增加新控件

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -134,6 +134,12 @@
         <attr name="sp_color" format="color" />
     </declare-styleable>
 
+    <declare-styleable name="NumberBadgeStyle">
+        <attr name="bg_color" format="color|reference" />
+        <attr name="point_bg_color" format="color|reference" />
+        <attr name="point_radius" format="dimension|reference" />
+    </declare-styleable>
+
 
     <style name="BlurDialogFragment.Default.Animation" parent="@android:style/Animation.Activity">
         <item name="android:windowEnterAnimation">@anim/slide_in_down</item>
