--- a/app/src/main/res/layout/layout_home_mine_item.xml
+++ b/app/src/main/res/layout/layout_home_mine_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/ripple_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,6 +28,19 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/x19"
         android:src="@drawable/me_icon_friend" />
+
+    <com.cylan.jiafeigou.widget.NumberBadge
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/x10"
+        android:layout_marginTop="40dp"
+        android:layout_toStartOf="@+id/iv_home_mine_item_friend"
+        android:gravity="center"
+        android:textColor="@color/color_white"
+        android:textSize="10sp"
+        app:bg_color="@color/color_red"
+        app:point_radius="@dimen/x4" />
 
     <View
         android:layout_width="match_parent"
