--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/act_panorama_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -169,70 +170,6 @@
 
 
     </RelativeLayout>
-
-
-    <LinearLayout
-        android:id="@+id/act_panorama_camera_quick_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/act_panorama_camera_bottom_panel"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/y15"
-        android:layout_marginEnd="@dimen/y15"
-        android:alpha="0"
-        android:gravity="end"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/act_panorama_camera_quick_menu_item1_mic"
-            android:layout_width="@dimen/y42"
-            android:layout_height="@dimen/y42"
-            android:src="@drawable/camera720_icon_no_talk_selector" />
-
-        <ImageView
-            android:id="@+id/act_panorama_camera_quick_menu_item2_voice"
-            android:layout_width="@dimen/y42"
-            android:layout_height="@dimen/y42"
-            android:layout_marginBottom="@dimen/y15"
-            android:layout_marginTop="@dimen/y15"
-            android:src="@drawable/camera720_icon_no_voice_selector" />
-
-        <RelativeLayout
-            android:layout_width="@dimen/y138"
-            android:layout_height="@dimen/y42"
-            android:background="@drawable/panorama_camera_quick_menu_item3">
-
-            <ImageView
-                android:id="@+id/act_panorama_camera_quick_menu_item3_left"
-                android:layout_width="@dimen/y24"
-                android:layout_height="@dimen/y24"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/y9"
-                android:src="@drawable/btn_leftkey_selector" />
-
-            <TextView
-                android:id="@+id/act_panorama_camera_quick_menu_item3_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="速率:高清"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/sp15" />
-
-            <ImageView
-                android:id="@+id/act_panorama_camera_quick_menu_item3_right"
-                android:layout_width="@dimen/y24"
-                android:layout_height="@dimen/y24"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/y9"
-                android:src="@drawable/btn_rightkey_selector" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
