--- a/app/src/main/res/layout/fragment_home_mine_share_content.xml
+++ b/app/src/main/res/layout/fragment_home_mine_share_content.xml
@@ -31,7 +31,7 @@
         android:focusable="true">
 
         <com.cylan.jiafeigou.widget.CustomToolbar
-            android:id="@id/custom_toolbar"
+            android:id="@+id/toolbar"
             layout="@layout/layout_default_custom_tool_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/custom_toolbar">
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/sharedContentList"
