--- a/app/src/main/res/layout/fragment_share_content_h5_detail.xml
+++ b/app/src/main/res/layout/fragment_share_content_h5_detail.xml
@@ -15,44 +15,60 @@
         android:clickable="true"
         android:focusable="true">
 
-        <RelativeLayout
-            android:id="@+id/headerToolbar"
+        <FrameLayout
+            android:id="@+id/headerToolbarContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@{themeRules.timeRule==0?@color/color_0ba8cf:@color/color_23344e}"
             android:minHeight="@dimen/y48">
 
-            <ImageView
-                android:id="@+id/headerMenuBack"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:padding="@dimen/y14"
-                android:src="@drawable/nav_tab_back_selector" />
+            <RelativeLayout
+                android:id="@+id/headerToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/headerMenuTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                <ImageView
+                    android:id="@+id/headerMenuBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/y48"
+                    android:padding="@dimen/y15"
+                    android:src="@drawable/nav_tab_back_selector" />
 
-            <ImageButton
-                android:id="@+id/headerMenuShare"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:layout_marginEnd="@dimen/y14"
-                android:layout_toStartOf="@+id/headerMenuDelete"
-                android:background="@android:color/transparent"
-                android:src="@drawable/details_icon_share" />
+                <TextView
+                    android:id="@+id/headerMenuTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/y10"
+                    android:layout_marginStart="@dimen/y10"
+                    android:layout_toEndOf="@+id/headerMenuBack"
+                    android:layout_toStartOf="@+id/headerMenuShare"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:text="@string/share_default_title"
+                    android:textColor="@color/color_444444"
+                    android:textSize="@dimen/sp22" />
 
-            <ImageButton
-                android:id="@+id/headerMenuDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/y14"
-                android:background="@android:color/transparent"
-                android:src="@drawable/album_delete_selector" />
-        </RelativeLayout>
+                <ImageButton
+                    android:id="@+id/headerMenuShare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/y48"
+                    android:layout_marginEnd="@dimen/y14"
+                    android:layout_toStartOf="@+id/headerMenuDelete"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/details_icon_share" />
+
+                <ImageButton
+                    android:id="@+id/headerMenuDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/y48"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="@dimen/y14"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/album_delete_selector" />
+            </RelativeLayout>
+        </FrameLayout>
 
         <WebView
             android:id="@+id/shareH5WebView"
@@ -61,6 +77,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/headerToolbar" />
+            app:layout_constraintTop_toBottomOf="@id/headerToolbarContainer" />
     </android.support.constraint.ConstraintLayout>
 </layout>
