--- a/app/src/main/res/layout/item_panorama_logo.xml
+++ b/app/src/main/res/layout/item_panorama_logo.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_panorama_logo_background"
     android:layout_width="@dimen/y69"
     android:layout_height="@dimen/y69"
-    android:layout_marginStart="@dimen/y14">
+    android:layout_marginStart="@dimen/y18">
 
-    <com.cylan.jiafeigou.support.photoselect.CircleImageView
-        android:id="@+id/item_panorama_logo_img"
+
+    <FrameLayout
+        android:id="@+id/item_panorama_logo_picture"
         android:layout_width="@dimen/y63"
         android:layout_height="@dimen/y63"
-        android:layout_gravity="center"
-        android:src="@drawable/logo_white" />
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/item_panorama_logo_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/Logo_Selection"
+            android:textColor="#CCFFFFFF"
+            android:textSize="@dimen/sp17"
+            android:visibility="invisible" />
+    </FrameLayout>
+
 </FrameLayout>
