--- a/app/src/main/res/color/color_panorama_album_menu_photo_mode.xml
+++ b/app/src/main/res/color/color_panorama_album_menu_photo_mode.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/color_4b9fd5" android:state_checked="true" />
-    <item android:color="#CBCBCB" />
+    <item android:color="#CBCBCB" android:state_enabled="false" />
+    <item android:color="@color/color_666666" />
 </selector>
