--- a/app/src/main/res/drawable/icon_panorama_album_menu_photo_phone.xml
+++ b/app/src/main/res/drawable/icon_panorama_album_menu_photo_phone.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/album_icon_album_blue" android:state_checked="true" />
-    <item android:drawable="@drawable/album_icon_album_gray" android:state_checked="false" />
     <item android:drawable="@drawable/album_icon_album_gray_disabled" android:state_enabled="false" />
+    <item android:drawable="@drawable/album_icon_album_gray" />
 </selector>
