--- a/app/src/main/res/layout/fragment_home_mine_setting.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting.xml
@@ -9,9 +9,9 @@
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/layout_default_custom_tool_bar"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_shadow="false"
         hunt:ct_enable_theme="true"
@@ -30,210 +30,78 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:id="@+id/rLayout_home_setting_accessMes"
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_home_setting_accessMes"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y54">
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_title="@string/PUSH_MSG"
+                hunt:sv_v_divider="true" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:text="@string/PUSH_MSG"
-                    android:textColor="@color/color_black"
-                    android:textSize="@dimen/sp16" />
 
-                <com.cylan.jiafeigou.widget.SafeSwitchButton
-                    android:id="@+id/btn_item_switch_accessMes"
-                    style="@style/SwitchButtonStyleMD"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:checked="false"
-                    android:paddingRight="@dimen/x26" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
-                    android:background="@color/color_f2f2f2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_sound_container"
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_sound_container"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y54">
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_title="@string/IN_APP_SOUND"
+                hunt:sv_v_divider="true" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:text="@string/IN_APP_SOUND"
-                    android:textColor="@color/color_black"
-                    android:textSize="@dimen/sp16" />
 
-                <com.cylan.jiafeigou.widget.SafeSwitchButton
-                    android:id="@+id/btn_item_switch_voide"
-                    style="@style/SwitchButtonStyleMD"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:checked="false"
-                    android:paddingRight="@dimen/x26" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
-                    android:background="@color/color_f2f2f2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_vibrate_container"
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_vibrate_container"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y54">
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_title="@string/IN_APP_VIBRATE"
+                hunt:sv_v_divider="true" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:text="@string/IN_APP_VIBRATE"
-                    android:textColor="@color/color_black"
-                    android:textSize="@dimen/sp16" />
-
-                <com.cylan.jiafeigou.widget.SafeSwitchButton
-                    android:id="@+id/btn_item_switch_shake"
-                    style="@style/SwitchButtonStyleMD"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:checked="false"
-                    android:paddingRight="@dimen/x26" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
-                    android:background="@color/color_f2f2f2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_home_setting_clear"
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_home_setting_wechat"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y70">
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_title="微信接收报警消息"
+                hunt:sv_v_divider="true" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/x20"
-                        android:text="@string/CLEAR_DATA"
-                        android:textColor="@color/color_black"
-                        android:textSize="@dimen/sp16" />
-
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true">
-
-                        <ProgressBar
-                            android:id="@+id/progressbar_load_cache_size"
-                            android:layout_width="@dimen/x20"
-                            android:layout_height="@dimen/y20"
-                            android:layout_marginLeft="@dimen/x20"
-                            android:visibility="gone" />
-
-                        <TextView
-                            android:id="@+id/tv_cache_size"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/x20"
-                            android:text="2.3M"
-                            android:textColor="@color/color_8c8c8c"
-                            android:textSize="@dimen/sp13" />
-
-                    </FrameLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
-                    android:background="@color/color_f2f2f2" />
-
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:id="@+id/rl_home_setting_recommend"
+            <com.cylan.jiafeigou.widget.SettingItemView0
+                android:id="@+id/sv_home_setting_clear"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y54">
+                android:layout_height="@dimen/y72"
+                android:layout_marginEnd="@dimen/x10"
+                android:layout_marginStart="@dimen/x10"
+                hunt:sv_sub_title="0.0M"
+                hunt:sv_switch_visibility="false"
+                hunt:sv_title="@string/CLEAR_DATA"
+                hunt:sv_v_divider="true" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:text="@string/app_share"
-                    android:textColor="@color/color_black"
-                    android:textSize="@dimen/sp16" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dip"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
-                    android:background="@color/color_f2f2f2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_home_setting_about"
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_home_setting_recommend"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y54">
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_switch_visibility="false"
+                hunt:sv_title="@string/app_share"
+                hunt:sv_v_divider="true" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:text="@string/ABOUT"
-                    android:textColor="@color/color_black"
-                    android:textSize="@dimen/sp16" />
-
-            </RelativeLayout>
+            <com.cylan.jiafeigou.widget.SettingItemView1
+                android:id="@+id/sv_home_setting_about"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y54"
+                android:layout_marginEnd="@dimen/x20"
+                android:layout_marginStart="@dimen/x20"
+                hunt:sv_switch_visibility="false"
+                hunt:sv_title="@string/ABOUT"
+                hunt:sv_v_divider="true" />
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y10"
-            android:background="@drawable/little_shape" />
     </FrameLayout>
 
 </LinearLayout>
