--- a/app/src/main/res/layout/layout_share_to_item.xml
+++ b/app/src/main/res/layout/layout_share_to_item.xml
@@ -3,25 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/y48">
 
+    <ImageView
+        android:layout_marginStart="@dimen/y25"
+        android:id="@+id/imv_share_info"
+        android:layout_width="@dimen/x24"
+        android:layout_height="@dimen/x24"
+        android:layout_gravity="center_vertical"
+        android:scaleType="fitCenter"
+        android:src="@drawable/icon_friend" />
+
     <TextView
         android:id="@+id/tv_share_info"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/x20"
+        android:layout_marginStart="@dimen/x20"
         android:clickable="true"
-        android:drawablePadding="@dimen/y20"
-
         android:focusable="true"
         android:gravity="center_vertical"
-        android:paddingEnd="@dimen/y20"
-        android:paddingStart="@dimen/y20"
         android:text="@string/Tap2_Share_Moments" />
 
-    <ImageView
-        android:id="@+id/imv_share_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/icon_friend" />
 
 </LinearLayout>
 
