--- a/app/src/main/res/drawable/border_solid_circle.xml
+++ b/app/src/main/res/drawable/border_solid_circle.xml
@@ -1,7 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/color_white" />
+    <solid android:color="@color/color_white"
+        />
     <stroke
-        android:width="3dp"
+        android:width="2dp"
         android:color="@color/color_e8e8e8" />
 </shape>
