--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -62,6 +62,7 @@
         <attr name="ct_icon_right" format="reference" />
         <attr name="ct_enable_shadow" format="boolean" />
         <attr name="ct_fit_system_window" format="boolean|reference" />
+        <attr name="ct_left_title_size" format="dimension|reference" />
     </declare-styleable>
     <declare-styleable name="SWheelViewStyle">
         <attr name="sw_shortLineHeight" format="float|dimension" />
